/*
 * $Id: ChangeLog,v 1.520 2002/12/08 20:10:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2002-12-11 03:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + include/regex.h
  + source/rtl/regex.c
    + Added RegEx engine based on RegEx 4.4-2 Copyright 1992, 1993, 1994, 1997 Henry Spencer.
    + New RegEx Search function HB_AtX( <sRegEx>, <sTring>, <lCaseSensitive>, [[@]nStart], [[@]nEnd] ) => <sFoundText>
      /* if nStart and/or nEnd are passed BY REFERENCE, they will be set to Start and Length of found text. */

  + doc/regex.txt
    + Copyright notice as per COPYRIGHT terms.

  + tests/tstregex.prg
    + Small demo test of new HB_AtX( <sRegEx>, <sTring>, <lCaseSensitive>, [[@]nStart], [[@]nEnd] )

  * makefile.bc
  * makefile.vc
  * source/rtl/Makefile
    * Added rtl/regex.c

2002-12-08 12:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    + Added support for new syntax:
      TRY
         ...
         [THROW( <exp> )]
         ...
      [CATCH <Id>]
      END

  * source/rtl/terror.prg
    + Added HB_SetTry() and HB_ResetTry()
    + Added Optional Paramaters ( SubSystem, SubCode, Operation, Description, Args ) to contructor ErrorNew()

  * source/vm/break.c
    + Added new Throw( xExp )

  + tests/trycatch.prg
    + New sample to demonstrate new TRY [THROW...] [CATCH ...] END syntax.

2002-12-07 18:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/macro/macro.slx
    * Removed recent addition of of reset yylval.string to NIL on EOF token.

  * source/macro/macro.y
    ! Fixed gpf related to hb_xfree() of yylval.string

2002-11-07 21:45 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/menuto.prg
    ! Fixed Color Parameters when only One color is passed

2002-12-06 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>