@@ -1,5 +1,5 @@
 /*
- * $Id: regex.c,v 1.0 2002/12/11 20:10:50 ronpinkas Exp $
+ * $Id: regex.c,v 1.1 2002/12/11 11:06:55 ronpinkas Exp $
  */
 
 /*
@@ -172,11 +172,9 @@ static int never = 0;       /* for use in asserts; shuts lint up */
  = #define  REG_PEND    0040
  = #define  REG_DUMP    0200
  */
-int             /* 0 success, otherwise REG_something */
-regcomp(preg, pattern, cflags)
-regex_t *preg;
-const char *pattern;
-int cflags;
+
+/* 0 success, otherwise REG_something */
+int regcomp( regex_t *preg, const char *pattern, int cflags )
 {
     struct parse pa;
     register struct re_guts *g;
@@ -277,10 +275,7 @@ int cflags;
  - p_ere - ERE parser top level, concatenation and alternation
  == static void p_ere(register struct parse *p, int stop);
  */
-static void
-p_ere(p, stop)
-register struct parse *p;
-int stop;           /* character this ERE should end at */
+static void p_ere( register struct parse *p, int stop /* character this ERE should end at */ )
 {
     register char c;
     register sopno prevback;
@@ -323,9 +318,7 @@ int stop;           /* character this ERE should end at */
  - p_ere_exp - parse one subERE, an atom possibly followed by a repetition op
  == static void p_ere_exp(register struct parse *p);
  */
-static void
-p_ere_exp(p)
-register struct parse *p;
+static void p_ere_exp( register struct parse *p )
 {
     register char c;
     register sopno pos;
@@ -472,9 +465,7 @@ register struct parse *p;
  - p_str - string (no metacharacters) "parser"
  == static void p_str(register struct parse *p);
  */
-static void
-p_str(p)
-register struct parse *p;
+static void p_str( register struct parse *p )
 {
     REQUIRE(MORE(), REG_EMPTY);
     while (MORE())
@@ -493,11 +484,8 @@ register struct parse *p;
  * category in such cases.  This is fairly harmless; not worth fixing.
  * The amount of lookahead needed to avoid this kludge is excessive.
  */
-static void
-p_bre(p, end1, end2)
-register struct parse *p;
-register int end1;      /* first terminating character */
-register int end2;      /* second terminating character */
+
+static void p_bre( register struct parse *p, register int end1 , register int end2 )
 {
     register sopno start = HERE();
     register int first = 1;         /* first subexpression? */
@@ -526,10 +514,9 @@ register int end2;      /* second terminating character */
  - p_simp_re - parse a simple RE, an atom possibly followed by a repetition
  == static int p_simp_re(register struct parse *p, int starordinary);
  */
-static int          /* was the simple RE an unbackslashed $? */
-p_simp_re(p, starordinary)
-register struct parse *p;
-int starordinary;       /* is a leading * an ordinary character? */
+
+/* was the simple RE an unbackslashed $? */
+static int p_simp_re( register struct parse *p, int starordinary /* is a leading * an ordinary character? */ )
 {
     register int c;
     register int count;
@@ -644,9 +631,7 @@ int starordinary;       /* is a leading * an ordinary character? */
  - p_count - parse a repetition count
  == static int p_count(register struct parse *p);
  */
-static int          /* the value */
-p_count(p)
-register struct parse *p;
+static int /* the value */ p_count( register struct parse *p )
 {
     register int count = 0;
     register int ndigits = 0;
@@ -667,9 +652,7 @@ register struct parse *p;
  * Note a significant property of this code:  if the allocset() did SETERROR,
  * no set operations are done.
  */
-static void
-p_bracket(p)
-register struct parse *p;
+static void p_bracket( register struct parse *p )
 {
     register cset *cs = allocset(p);
     register int invert = 0;
@@ -741,10 +724,7 @@ register struct parse *p;
  - p_b_term - parse one term of a bracketed character list
  == static void p_b_term(register struct parse *p, register cset *cs);
  */
-static void
-p_b_term(p, cs)
-register struct parse *p;
-register cset *cs;
+static void p_b_term( register struct parse *p, register cset *cs )
 {
     register char c;
     register char start, finish;
@@ -806,10 +786,7 @@ register cset *cs;
  - p_b_cclass - parse a character-class name and deal with it
  == static void p_b_cclass(register struct parse *p, register cset *cs);
  */
-static void
-p_b_cclass(p, cs)
-register struct parse *p;
-register cset *cs;
+static void p_b_cclass( register struct parse *p, register cset *cs )
 {
     register char *sp = p->next;
     register struct cclass *cp;
@@ -842,10 +819,7 @@ register cset *cs;
  *
  * This implementation is incomplete. xxx
  */
-static void
-p_b_eclass(p, cs)
-register struct parse *p;
-register cset *cs;
+static void p_b_eclass( register struct parse *p, register cset *cs )
 {
     register char c;
 
@@ -857,9 +831,7 @@ register cset *cs;
  - p_b_symbol - parse a character or [..]ed multicharacter collating symbol
  == static char p_b_symbol(register struct parse *p);
  */
-static char         /* value of symbol */
-p_b_symbol(p)
-register struct parse *p;
+static char /* value of symbol */ p_b_symbol( register struct parse *p )
 {
     register char value;
 
@@ -877,10 +849,8 @@ register struct parse *p;
  - p_b_coll_elem - parse a collating-element name and look it up
  == static char p_b_coll_elem(register struct parse *p, int endc);
  */
-static char         /* value of collating element */
-p_b_coll_elem(p, endc)
-register struct parse *p;
-int endc;           /* name ended by endc,']' */
+/* value of collating element */
+static char p_b_coll_elem( register struct parse *p, int endc /* name ended by endc,']' */ )
 {
     register char *sp = p->next;
     register struct cname *cp;
@@ -906,9 +876,8 @@ int endc;           /* name ended by endc,']' */
  - othercase - return the case counterpart of an alphabetic
  == static char othercase(int ch);
  */
-static char         /* if no counterpart, return ch */
-othercase(ch)
-int ch;
+/* if no counterpart, return ch */
+static char othercase( int ch )
 {
     assert(isalpha(ch));
     if (isupper(ch))
@@ -925,10 +894,7 @@ int ch;
  *
  * Boy, is this implementation ever a kludge...
  */
-static void
-bothcases(p, ch)
-register struct parse *p;
-int ch;
+static void bothcases( register struct parse *p, int ch )
 {
     register char *oldnext = p->next;
     register char *oldend = p->end;
@@ -950,10 +916,7 @@ int ch;
  - ordinary - emit an ordinary character
  == static void ordinary(register struct parse *p, register int ch);
  */
-static void
-ordinary(p, ch)
-register struct parse *p;
-register int ch;
+static void ordinary( register struct parse *p, register int ch )
 {
     register cat_t *cap = p->g->categories;
 
@@ -972,9 +935,7 @@ register int ch;
  *
  * Boy, is this implementation ever a kludge...
  */
-static void
-nonnewline(p)
-register struct parse *p;
+static void nonnewline( register struct parse *p )
 {
     register char *oldnext = p->next;
     register char *oldend = p->end;
@@ -996,12 +957,10 @@ register struct parse *p;
  - repeat - generate code for a bounded repetition, recursively if needed
  == static void repeat(register struct parse *p, sopno start, int from, int to);
  */
-static void
-repeat(p, start, from, to)
-register struct parse *p;
-sopno start;            /* operand from here to end of strip */
-int from;           /* repeated from this number */
-int to;             /* to this number of times (maybe INFINITY) */
+static void repeat( register struct parse *p,
+                    sopno start /* operand from here to end of strip */,
+                    int from,           /* repeated from this number */
+                    int to )             /* to this number of times (maybe INFINITY) */
 {
     register sopno finish = HERE();
 #   define  N   2
@@ -1068,10 +1027,10 @@ int to;             /* to this number of times (maybe INFINITY) */
  - seterr - set an error condition
  == static int seterr(register struct parse *p, int e);
  */
-static int          /* useless but makes type checking happy */
-seterr(p, e)
-register struct parse *p;
-int e;
+static int /* useless but makes type checking happy */
+seterr(
+register struct parse *p,
+int e )
 {
     if (p->error == 0)  /* keep earliest error condition */
         p->error = e;
@@ -1085,8 +1044,8 @@ int e;
  == static cset *allocset(register struct parse *p);
  */
 static cset *
-allocset(p)
-register struct parse *p;
+allocset
+( register struct parse *p )
 {
     register int no = p->g->ncsets++;
     register size_t nc;
@@ -1140,9 +1099,9 @@ register struct parse *p;
  == static void freeset(register struct parse *p, register cset *cs);
  */
 static void
-freeset(p, cs)
-register struct parse *p;
-register cset *cs;
+freeset
+( register struct parse *p,
+register cset *cs )
 {
     register int i;
     register cset *top = &p->g->sets[p->g->ncsets];
@@ -1165,9 +1124,9 @@ register cset *cs;
  * the same value!
  */
 static int          /* set number */
-freezeset(p, cs)
-register struct parse *p;
-register cset *cs;
+freezeset
+( register struct parse *p,
+register cset *cs )
 {
     register uch h = cs->hash;
     register int i;
@@ -1199,9 +1158,9 @@ register cset *cs;
  == static int firstch(register struct parse *p, register cset *cs);
  */
 static int          /* character; there is no "none" value */
-firstch(p, cs)
-register struct parse *p;
-register cset *cs;
+firstch(
+register struct parse *p,
+register cset *cs )
 {
     register int i;
     register size_t css = (size_t)p->g->csetsize;
@@ -1218,9 +1177,9 @@ register cset *cs;
  == static int nch(register struct parse *p, register cset *cs);
  */
 static int
-nch(p, cs)
-register struct parse *p;
-register cset *cs;
+nch
+( register struct parse *p,
+register cset *cs )
 {
     register int i;
     register size_t css = (size_t)p->g->csetsize;
@@ -1238,18 +1197,18 @@ register cset *cs;
  == register char *cp);
  */
 static void
-mcadd(p, cs, cp)
-register struct parse *p;
-register cset *cs;
-register char *cp;
+mcadd
+( register struct parse *p,
+register cset *cs,
+register char *cp )
 {
     register size_t oldend = cs->smultis;
 
     cs->smultis += strlen(cp) + 1;
     if (cs->multis == NULL)
-        cs->multis = malloc(cs->smultis);
+        cs->multis = (char *) malloc(cs->smultis);
     else
-        cs->multis = realloc(cs->multis, cs->smultis);
+        cs->multis = (char *) realloc(cs->multis, cs->smultis);
     if (cs->multis == NULL) {
         SETERROR(REG_ESPACE);
         return;
@@ -1264,9 +1223,9 @@ register char *cp;
  == static void mcsub(register cset *cs, register char *cp);
  */
 static void
-mcsub(cs, cp)
-register cset *cs;
-register char *cp;
+mcsub
+( register cset *cs,
+register char *cp )
 {
     register char *fp = mcfind(cs, cp);
     register size_t len = strlen(fp);
@@ -1282,7 +1241,7 @@ register char *cp;
         return;
     }
 
-    cs->multis = realloc(cs->multis, cs->smultis);
+    cs->multis = (char *) realloc(cs->multis, cs->smultis);
     assert(cs->multis != NULL);
 }
 
@@ -1291,9 +1250,9 @@ register char *cp;
  == static int mcin(register cset *cs, register char *cp);
  */
 static int
-mcin(cs, cp)
-register cset *cs;
-register char *cp;
+mcin
+( register cset *cs,
+register char *cp )
 {
     return(mcfind(cs, cp) != NULL);
 }
@@ -1303,9 +1262,9 @@ register char *cp;
  == static char *mcfind(register cset *cs, register char *cp);
  */
 static char *
-mcfind(cs, cp)
-register cset *cs;
-register char *cp;
+mcfind
+( register cset *cs,
+register char *cp )
 {
     register char *p;
 
@@ -1325,9 +1284,9 @@ register char *cp;
  * is deferred.
  */
 static void
-mcinvert(p, cs)
-register struct parse *p;
-register cset *cs;
+mcinvert
+( register struct parse *p,
+register cset *cs )
 {
     HB_SYMBOL_UNUSED( p );
 
@@ -1342,9 +1301,9 @@ register cset *cs;
  * is deferred.
  */
 static void
-mccase(p, cs)
-register struct parse *p;
-register cset *cs;
+mccase
+( register struct parse *p,
+register cset *cs )
 {
     HB_SYMBOL_UNUSED( p );
     assert(cs->multis == NULL); /* xxx */
@@ -1355,9 +1314,9 @@ register cset *cs;
  == static int isinsets(register struct re_guts *g, int c);
  */
 static int          /* predicate */
-isinsets(g, c)
-register struct re_guts *g;
-int c;
+isinsets(
+register struct re_guts *g,
+int c )
 {
     register uch *col;
     register int i;
@@ -1375,10 +1334,10 @@ int c;
  == static int samesets(register struct re_guts *g, int c1, int c2);
  */
 static int          /* predicate */
-samesets(g, c1, c2)
-register struct re_guts *g;
-int c1;
-int c2;
+samesets(
+register struct re_guts *g,
+int c1,
+int c2 )
 {
     register uch *col;
     register int i;
@@ -1397,9 +1356,9 @@ int c2;
  == static void categorize(struct parse *p, register struct re_guts *g);
  */
 static void
-categorize(p, g)
-struct parse *p;
-register struct re_guts *g;
+categorize(
+struct parse *p,
+register struct re_guts *g )
 {
     register cat_t *cats = g->categories;
     register int c;
@@ -1425,10 +1384,10 @@ register struct re_guts *g;
  == static sopno dupl(register struct parse *p, sopno start, sopno finish);
  */
 static sopno            /* start of duplicate */
-dupl(p, start, finish)
-register struct parse *p;
-sopno start;            /* from here */
-sopno finish;           /* to this less one */
+dupl(
+register struct parse *p,
+sopno start,            /* from here */
+sopno finish )           /* to this less one */
 {
     register sopno ret = HERE();
     register sopno len = finish - start;
@@ -1453,10 +1412,10 @@ sopno finish;           /* to this less one */
  * some changes to the data structures.  Maybe later.
  */
 static void
-doemit(p, op, opnd)
-register struct parse *p;
-sop op;
-size_t opnd;
+doemit(
+register struct parse *p,
+sop op,
+size_t opnd )
 {
     /* avoid making error situations worse */
     if (p->error != 0)
@@ -1479,11 +1438,11 @@ size_t opnd;
  == static void doinsert(register struct parse *p, sop op, size_t opnd, sopno pos);
  */
 static void
-doinsert(p, op, opnd, pos)
-register struct parse *p;
-sop op;
-size_t opnd;
-sopno pos;
+doinsert(
+register struct parse *p,
+sop op,
+size_t opnd,
+sopno pos )
 {
     register sopno sn;
     register sop s;
@@ -1519,10 +1478,10 @@ sopno pos;
  == static void dofwd(register struct parse *p, sopno pos, sop value);
  */
 static void
-dofwd(p, pos, value)
-register struct parse *p;
-register sopno pos;
-sop value;
+dofwd(
+register struct parse *p,
+register sopno pos,
+sop value )
 {
     /* avoid making error situations worse */
     if (p->error != 0)
@@ -1537,9 +1496,9 @@ sop value;
  == static void enlarge(register struct parse *p, sopno size);
  */
 static void
-enlarge(p, size)
-register struct parse *p;
-register sopno size;
+enlarge(
+register struct parse *p,
+register sopno size )
 {
     register sop *sp;
 
@@ -1560,9 +1519,9 @@ register sopno size;
  == static void stripsnug(register struct parse *p, register struct re_guts *g);
  */
 static void
-stripsnug(p, g)
-register struct parse *p;
-register struct re_guts *g;
+stripsnug(
+register struct parse *p,
+register struct re_guts *g )
 {
     g->nstates = p->slen;
     g->strip = (sop *)realloc((char *)p->strip, p->slen * sizeof(sop));
@@ -1583,9 +1542,9 @@ register struct re_guts *g;
  * Note that must and mlen got initialized during setup.
  */
 static void
-findmust(p, g)
-struct parse *p;
-register struct re_guts *g;
+findmust(
+struct parse *p,
+register struct re_guts *g )
 {
     register sop *scan;
     sop *start;
@@ -1642,7 +1601,7 @@ register struct re_guts *g;
         return;
 
     /* turn it into a character string */
-    g->must = malloc((size_t)g->mlen + 1);
+    g->must = (char *) malloc((size_t)g->mlen + 1);
     if (g->must == NULL) {      /* argh; just forget it */
         g->mlen = 0;
         return;
@@ -1664,9 +1623,9 @@ register struct re_guts *g;
  == static sopno pluscount(register struct parse *p, register struct re_guts *g);
  */
 static sopno            /* nesting depth */
-pluscount(p, g)
-struct parse *p;
-register struct re_guts *g;
+pluscount(
+struct parse *p,
+register struct re_guts *g )
 {
     register sop *scan;
     register sop s;
@@ -1778,7 +1737,7 @@ static int nope = 0;		/* for use in asserts; shuts lint up */
 #define	ASSIGN(d, s)	memcpy(d, s, m->g->nstates)
 #define	EQ(a, b)	(memcmp(a, b, m->g->nstates) == 0)
 #define	STATEVARS	int vn; char *space
-#define	STATESETUP(m, nv)	{ (m)->space = malloc((nv)*(m)->g->nstates); \
+#define STATESETUP(m, nv)   { (m)->space = (char *) malloc((nv)*(m)->g->nstates); \
 				if ((m)->space == NULL) return(REG_ESPACE); \
 				(m)->vn = 0; }
 #define	STATETEARDOWN(m)	{ free((m)->space); }
@@ -1886,12 +1845,12 @@ static char *pchar(int ch);
  == size_t nmatch, regmatch_t pmatch[], int eflags);
  */
 static int          /* 0 success, REG_NOMATCH failure */
-matcher(g, string, nmatch, pmatch, eflags)
-register struct re_guts *g;
-char *string;
-size_t nmatch;
-regmatch_t pmatch[];
-int eflags;
+matcher(
+register struct re_guts *g,
+char *string,
+size_t nmatch,
+regmatch_t pmatch[],
+int eflags )
 {
     register char *endp;
     register int i;
@@ -2052,12 +2011,12 @@ int eflags;
  == char *stop, sopno startst, sopno stopst);
  */
 static char *           /* == stop (success) always */
-dissect(m, start, stop, startst, stopst)
-register struct match *m;
-char *start;
-char *stop;
-sopno startst;
-sopno stopst;
+dissect(
+register struct match *m,
+char *start,
+char *stop,
+sopno startst,
+sopno stopst )
 {
     register int i;
     register sopno ss;  /* start sop of current subRE */
@@ -2240,13 +2199,13 @@ sopno stopst;
  == char *stop, sopno startst, sopno stopst, sopno lev);
  */
 static char *           /* == stop (success) or NULL (failure) */
-backref(m, start, stop, startst, stopst, lev)
-register struct match *m;
-char *start;
-char *stop;
-sopno startst;
-sopno stopst;
-sopno lev;          /* PLUS nesting level */
+backref(
+register struct match *m,
+char *start,
+char *stop,
+sopno startst,
+sopno stopst,
+sopno lev )          /* PLUS nesting level */
 {
     register int i;
     register sopno ss;  /* start sop of current subRE */
@@ -2445,12 +2404,12 @@ sopno lev;          /* PLUS nesting level */
  == char *stop, sopno startst, sopno stopst);
  */
 static char *           /* where tentative match ended, or NULL */
-fast(m, start, stop, startst, stopst)
-register struct match *m;
-char *start;
-char *stop;
-sopno startst;
-sopno stopst;
+fast(
+register struct match *m,
+char *start,
+char *stop,
+sopno startst,
+sopno stopst )
 {
     register states st = m->st;
     register states fresh = m->fresh;
@@ -2536,12 +2495,12 @@ sopno stopst;
  == char *stop, sopno startst, sopno stopst);
  */
 static char *           /* where it ended */
-slow(m, start, stop, startst, stopst)
-register struct match *m;
-char *start;
-char *stop;
-sopno startst;
-sopno stopst;
+slow(
+register struct match *m,
+char *start,
+char *stop,
+sopno startst,
+sopno stopst )
 {
     register states st = m->st;
     register states empty = m->empty;
@@ -2632,13 +2591,13 @@ sopno stopst;
  == #define NNONCHAR    (CODEMAX-CHAR_MAX)
  */
 static states
-step(g, start, stop, bef, ch, aft)
-register struct re_guts *g;
-sopno start;            /* start state within strip */
-sopno stop;         /* state after stop state within strip */
-register states bef;        /* states reachable before */
-int ch;             /* character or NONCHAR code */
-register states aft;        /* states already known reachable after */
+step(
+register struct re_guts *g,
+sopno start,            /* start state within strip */
+sopno stop,         /* state after stop state within strip */
+register states bef,        /* states reachable before */
+int ch,             /* character or NONCHAR code */
+register states aft )        /* states already known reachable after */
 {
     register cset *cs;
     register sop s;
@@ -2754,12 +2713,12 @@ register states aft;        /* states already known reachable after */
  == #endif
  */
 static void
-print(m, caption, st, ch, d)
-struct match *m;
-char *caption;
-states st;
-int ch;
-FILE *d;
+print(
+struct match *m,
+char *caption,
+states st,
+int ch,
+FILE *d )
 {
     register struct re_guts *g = m->g;
     register int i;
@@ -2787,13 +2746,13 @@ FILE *d;
  == #endif
  */
 static void
-at(m, title, start, stop, startst, stopst)
-struct match *m;
-char *title;
-char *start;
-char *stop;
-sopno startst;
-sopno stopst;
+at(
+struct match *m,
+char *title,
+char *start,
+char *stop,
+sopno startst,
+sopno stopst )
 {
     if (!(m->eflags&REG_TRACE))
         return;
@@ -2817,8 +2776,8 @@ sopno stopst;
  * the non-debug compilation anyway, so it doesn't matter much.
  */
 static char *           /* -> representation */
-pchar(ch)
-int ch;
+pchar(
+int ch )
 {
     static char pbuf[10];
 
@@ -2858,12 +2817,12 @@ int ch;
  * have been prototyped.
  */
 int				/* 0 success, REG_NOMATCH failure */
-regexec(preg, string, nmatch, pmatch, eflags)
-const regex_t *preg;
-const char *string;
-size_t nmatch;
-regmatch_t pmatch[];
-int eflags;
+regexec(
+const regex_t *preg,
+const char *string,
+size_t nmatch,
+regmatch_t pmatch[],
+int eflags )
 {
 	register struct re_guts *g = preg->re_g;
 
@@ -2962,11 +2921,11 @@ static struct rerr {
  */
 /* ARGSUSED */
 size_t
-regerror(errcode, preg, errbuf, errbuf_size)
-int errcode;
-const regex_t *preg;
-char *errbuf;
-size_t errbuf_size;
+regerror(
+int errcode,
+const regex_t *preg,
+char *errbuf,
+size_t errbuf_size )
 {
     register struct rerr *r;
     register size_t len;
@@ -3010,9 +2969,9 @@ size_t errbuf_size;
  == static char *regatoi(const regex_t *preg, char *localbuf);
  */
 static char *
-regatoi(preg, localbuf)
-const regex_t *preg;
-char *localbuf;
+regatoi(
+const regex_t *preg,
+char *localbuf )
 {
     register struct rerr *r;
 
@@ -3042,8 +3001,8 @@ char *localbuf;
  = extern void regfree(regex_t *);
  */
 void
-regfree(preg)
-regex_t *preg;
+regfree(
+regex_t *preg )
 {
     register struct re_guts *g;
 
@@ -3075,7 +3034,7 @@ HB_FUNC( HB_ATX )
     regex_t re;
     regmatch_t aMatches[REGEX_MAX_GROUPS];
     int CFlags = REG_EXTENDED, EFlags = 0;
-    unsigned long ulLen, ulStart, ulEnd;
+    unsigned long ulLen;
 
     PHB_ITEM pRegEx = hb_param( 1, HB_IT_STRING );
     PHB_ITEM pString = hb_param( 2, HB_IT_STRING );
